--- a/index.html
+++ b/index.html
@@ -2,20 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Internal Css -->
-     <style>
+    <style>
         
-     </style>
+    </style>
 
     <title>Document</title>
 </head>
 <body>
+    <!-- Container-fluid -->
+    <div class="container-fluid">
+        <h1>My First Bootstrap Page</h1>
+        <p>This part is inside a .container-fluid class.</p>
+        <p>The .container-fluid class provides a full width container, spanning the entire width of the viewport.</p>
+    </div>
 
+    <!-- Container -->
+    <div class="container">
+        <h1>My First Bootstrap Page</h1>
+        <p>This part is inside a .container class.</p>
+        <p>The .container class provides a responsive fixed width container.</p>
+    </div>
 
 
     <!-- Latest compiled JavaScript -->
