--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <p>The .container class provides a responsive fixed width container.</p>
     </div>
 
+    <div class="container-sm">.container-sm</div>
+    <div class="container-md">.container-md</div>
+    <div class="container-lg">.container-lg</div>
+    <div class="container-xl">.container-xl</div>
+    <div class="container-xxl">.container-xxl</div>
+
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js"></script>
