--- a/index.html
+++ b/index.html
@@ -35,6 +35,66 @@
     <div class="container-xl">.container-xl</div>
     <div class="container-xxl">.container-xxl</div>
 
+    <div class="row">
+        <div class="col">.col</div>
+        <div class="col">.col</div>
+        <div class="col">.col</div>
+    </div>
+    
+    <div class="row">
+        <div class="col-sm-3">col</div>
+        <div class="col-sm-3">col</div>
+        <div class="col-sm-3">col</div>
+    </div>
+
+    <h1>Lesson 3</h1>
+    <!-- Text/Typograpghy -->
+
+    <div class="container mt-3">
+        <p>The font-size of each Bootstrap heading depends on the screen size. Try to resize the browser window to see the effect.</p>
+        <h1>h1 Bootstrap heading</h1>
+        <h2>h2 Bootstrap heading</h2>
+        <h3>h3 Bootstrap heading</h3>
+        <h4>h4 Bootstrap heading</h4>
+        <h5>h5 Bootstrap heading</h5>
+        <h6>h6 Bootstrap heading</h6>
+    </div>
+    <!--- you can add h1 - h6 classes to make other elements make them behave as headings  -->
+    <div class="container">
+        <p class="h1">h1 Bootstrap heading</p>
+        <p class="h2">h2 Bootstrap heading</p>
+        <p class="h3">h3 Bootstrap heading</p>
+        <p class="h4">h4 Bootstrap heading</p>
+        <p class="h5">h5 Bootstrap heading</p>
+        <p class="h6">h6 Bootstrap heading</p>
+    </div>
+
+    <!-- small elements and small classs used to create smaller secondary heading -->
+    <div class="mt-5 container">
+        <p class="h1">h1 <small>Bootstrap</small> heading</p>
+        <p class="h2">h2 <small>Bootstrap</small> heading</p>
+        <p class="h3">h3 Bootstrap heading</p>
+        <p class="h4">h4 Bootstrap heading</p>
+    </div>
+
+    <!-- mark or mark class will highlight with a yellow background color and some padding -->
+    <div class="container">
+        <p class="">Lorem ipsum <mark>dolor</mark> sit.</p>
+    </div>
+
+    <div class="container">
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sit.</p>
+        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
+        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
+        <p class="text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
+        <p class=""><a href="" class="text-decoration-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</a></p>
+        <p class="text-nowrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
+        <p class="text-capitalize">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
+        <p class="text-lowercase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
+        <p class="text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
+    </div>
+
+
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js"></script>
