--- a/index.html
+++ b/index.html
@@ -15,85 +15,36 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Container-fluid -->
-    <div class="container-fluid">
-        <h1>My First Bootstrap Page</h1>
-        <p>This part is inside a .container-fluid class.</p>
-        <p>The .container-fluid class provides a full width container, spanning the entire width of the viewport.</p>
-    </div>
 
-    <!-- Container -->
-    <div class="container">
-        <h1>My First Bootstrap Page</h1>
-        <p>This part is inside a .container class.</p>
-        <p>The .container class provides a responsive fixed width container.</p>
-    </div>
+    <!-- Lesson 4 -->
 
-    <div class="container-sm">.container-sm</div>
-    <div class="container-md">.container-md</div>
-    <div class="container-lg">.container-lg</div>
-    <div class="container-xl">.container-xl</div>
-    <div class="container-xxl">.container-xxl</div>
-
-    <div class="row">
-        <div class="col">.col</div>
-        <div class="col">.col</div>
-        <div class="col">.col</div>
+    <!-- Text Colors -->
+    <div class="">
+        <p class="text-muted">This text is muted.</p>
+        <p class="text-warning">This text is muted.</p>
+        <p class="text-primary">This text is muted.</p>
+        <p class="text-info">This text is muted.</p>
+        <p class="text-success">This text is muted.</p>
+        <p class="text-danger">This text is muted.</p>
+        <p class="text-grey">This text is muted.</p>
+        <p class="text-dark">This text is dark grey.</p>
+        <p class="text-body">Default body color (often black).</p>
+        <p class="text-secondary">This text is muted.</p>
     </div>
-    
-    <div class="row">
-        <div class="col-sm-3">col</div>
-        <div class="col-sm-3">col</div>
-        <div class="col-sm-3">col</div>
+<br>
+    <!-- Background color -->
+    <div class="mt-5">
+        <p class="text-muted">This text is muted.</p>
+        <p class="bg-warning">This text is muted.</p>
+        <p class="text-bg-primary">This text is muted.</p>
+        <p class="text-bg-info">This text is muted.</p>
+        <p class="bg-success">This text is muted.</p>
+        <p class="bg-danger">This text is muted.</p>
+        <p class="bg-grey">This text is muted.</p>
+        <p class="bg-dark">This text is dark grey.</p>
+        <p class="bg-body">Default body color (often black).</p>
+        <p class="bg-secondary">This text is muted.</p>
     </div>
-
-    <h1>Lesson 3</h1>
-    <!-- Text/Typograpghy -->
-
-    <div class="container mt-3">
-        <p>The font-size of each Bootstrap heading depends on the screen size. Try to resize the browser window to see the effect.</p>
-        <h1>h1 Bootstrap heading</h1>
-        <h2>h2 Bootstrap heading</h2>
-        <h3>h3 Bootstrap heading</h3>
-        <h4>h4 Bootstrap heading</h4>
-        <h5>h5 Bootstrap heading</h5>
-        <h6>h6 Bootstrap heading</h6>
-    </div>
-    <!--- you can add h1 - h6 classes to make other elements make them behave as headings  -->
-    <div class="container">
-        <p class="h1">h1 Bootstrap heading</p>
-        <p class="h2">h2 Bootstrap heading</p>
-        <p class="h3">h3 Bootstrap heading</p>
-        <p class="h4">h4 Bootstrap heading</p>
-        <p class="h5">h5 Bootstrap heading</p>
-        <p class="h6">h6 Bootstrap heading</p>
-    </div>
-
-    <!-- small elements and small classs used to create smaller secondary heading -->
-    <div class="mt-5 container">
-        <p class="h1">h1 <small>Bootstrap</small> heading</p>
-        <p class="h2">h2 <small>Bootstrap</small> heading</p>
-        <p class="h3">h3 Bootstrap heading</p>
-        <p class="h4">h4 Bootstrap heading</p>
-    </div>
-
-    <!-- mark or mark class will highlight with a yellow background color and some padding -->
-    <div class="container">
-        <p class="">Lorem ipsum <mark>dolor</mark> sit.</p>
-    </div>
-
-    <div class="container">
-        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sit.</p>
-        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
-        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
-        <p class="text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
-        <p class=""><a href="" class="text-decoration-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</a></p>
-        <p class="text-nowrap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
-        <p class="text-capitalize">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
-        <p class="text-lowercase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
-        <p class="text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis?</p>
-    </div>
-
 
 
     <!-- Latest compiled JavaScript -->
