--- a/index.html
+++ b/index.html
@@ -15,37 +15,52 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Lesson 5 -->
 
-    <!-- Lesson 4 -->
+    <!-- Tables -->
 
-    <!-- Text Colors -->
-    <div class="">
-        <p class="text-muted">This text is muted.</p>
-        <p class="text-warning">This text is muted.</p>
-        <p class="text-primary">This text is muted.</p>
-        <p class="text-info">This text is muted.</p>
-        <p class="text-success">This text is muted.</p>
-        <p class="text-danger">This text is muted.</p>
-        <p class="text-grey">This text is muted.</p>
-        <p class="text-dark">This text is dark grey.</p>
-        <p class="text-body">Default body color (often black).</p>
-        <p class="text-secondary">This text is muted.</p>
+    <div class="container mt-3 table-responsive-lg">
+        <h2>Striped Rows</h2>
+        <p>The .table-striped class adds zebra-stripes to a table:</p>            
+        <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Firstname</th>
+                <th>Lastname</th>
+                <th>Email</th>
+                <th>Email</th>
+                <th>Email</th>
+                <th>Email</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>Doe</td>
+                <td>john@example.com</td>
+                <td>john@example.com</td>
+                <td>john@example.com</td>
+            </tr>
+            <tr class="">
+                <td>Mary</td>
+                <td>Moe</td>
+                <td>Moe</td>
+                <td>mary@example.com</td>
+                <td>mary@example.com</td>
+                <td>mary@example.com</td>
+            </tr>
+            <tr>
+                <td>July</td>
+                <td>Dooley</td>
+                <td>Dooley</td>
+                <td>july@example.com</td>
+                <td>july@example.com</td>
+                <td>july@example.com</td>
+            </tr>
+        </tbody>
+        </table>
     </div>
-<br>
-    <!-- Background color -->
-    <div class="mt-5">
-        <p class="text-muted">This text is muted.</p>
-        <p class="bg-warning">This text is muted.</p>
-        <p class="text-bg-primary">This text is muted.</p>
-        <p class="text-bg-info">This text is muted.</p>
-        <p class="bg-success">This text is muted.</p>
-        <p class="bg-danger">This text is muted.</p>
-        <p class="bg-grey">This text is muted.</p>
-        <p class="bg-dark">This text is dark grey.</p>
-        <p class="bg-body">Default body color (often black).</p>
-        <p class="bg-secondary">This text is muted.</p>
-    </div>
-
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js"></script>
