--- a/index.html
+++ b/index.html
@@ -15,52 +15,28 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Lesson 5 -->
+    <!-- Lesson 6  -->
 
-    <!-- Tables -->
+    <!-- Imgaes -->
 
-    <div class="container mt-3 table-responsive-lg">
-        <h2>Striped Rows</h2>
-        <p>The .table-striped class adds zebra-stripes to a table:</p>            
-        <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Email</th>
-                <th>Email</th>
-                <th>Email</th>
-                <th>Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>John</td>
-                <td>Doe</td>
-                <td>Doe</td>
-                <td>john@example.com</td>
-                <td>john@example.com</td>
-                <td>john@example.com</td>
-            </tr>
-            <tr class="">
-                <td>Mary</td>
-                <td>Moe</td>
-                <td>Moe</td>
-                <td>mary@example.com</td>
-                <td>mary@example.com</td>
-                <td>mary@example.com</td>
-            </tr>
-            <tr>
-                <td>July</td>
-                <td>Dooley</td>
-                <td>Dooley</td>
-                <td>july@example.com</td>
-                <td>july@example.com</td>
-                <td>july@example.com</td>
-            </tr>
-        </tbody>
-        </table>
-    </div>
+<div class="container mt-4">
+    <img src="./img/eggs.jpg" class="img-fluid" alt="">
+</div>
+<div class="container mt-4">
+    <img src="./img/eggs.jpg" class="img-thumbnail" alt="">
+
+</div>
+<div class="container mt-4">
+    <img src="./img/eggs.jpg" class="rounded-circle" alt="">
+
+</div>
+<div class="container mt-4">
+    <img src="./img/eggs.jpg" class="rounded-bottom-5" alt="">
+</div>
+<div class="container mt-4">
+    <img src="./img/eggs.jpg" class="img-fluid" alt="">
+    
+</div>
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js"></script>
