--- a/index.html
+++ b/index.html
@@ -15,28 +15,34 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Lesson 6  -->
+    <!-- Lesson 7  -->
 
-    <!-- Imgaes -->
+    <!-- Alerts -->
 
-<div class="container mt-4">
-    <img src="./img/eggs.jpg" class="img-fluid" alt="">
-</div>
-<div class="container mt-4">
-    <img src="./img/eggs.jpg" class="img-thumbnail" alt="">
+    <div class="container mt-3">
+        <div class="alert alert-success">
+            <strong>Success!</strong> You should <a href="#" class="alert-link">read this message</a>.
+        </div>
+        <div class="alert alert-info">
+            <strong>Info!</strong> This alert box could indicate a neutral informative change or action.</a>.
+        </div>
 
-</div>
-<div class="container mt-4">
-    <img src="./img/eggs.jpg" class="rounded-circle" alt="">
+        <!-- dismisable alerts -->
+        <div class="alert alert-info alert-dismissible">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong>Info!</strong> This alert box could indicate a neutral informative change or action.
+        </div>  
+        <div class="alert alert-info alert-dismissible">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong>Info!</strong> This alert box could indicate a neutral informative change or action.
+        </div>
 
-</div>
-<div class="container mt-4">
-    <img src="./img/eggs.jpg" class="rounded-bottom-5" alt="">
-</div>
-<div class="container mt-4">
-    <img src="./img/eggs.jpg" class="img-fluid" alt="">
-    
-</div>
+        <!-- animated the close icon will fade and then show -->
+        <div class="alert alert-dark alert-dismissible fade show">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong>Dark!</strong> Dark grey alert.
+        </div>
+    </div>
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js"></script>
