--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@
         <button type="button" disabled>diasbled button</button>
         <button type="button" class="active">diasbled button</button>
         <a href="" class="btn btn-secondary disabled">click</a>
-        <a href="" class="btn btn-secondary active">click</a>
+        <a href="" class="btn btn-secondary active">click</a><br><br>
 
         <!-- for the spinner -->
         <button class="btn btn-primary">
             <span class="spinner-border spinner-border-sm"></span>
+        </button>
+        
+        <button class="btn btn-primary">
+            <span class="spinner-grow spinner-grow-sm"></span>
+            Loading..
         </button>
         
         <button class="btn btn-primary">
