--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
             <li class="page-item"><a href="" class="page-link">next</a></li>
         </ul>
 
+        <!-- Breadcrumbs -->
+        <ul class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Photos</a></li>
+            <li class="breadcrumb-item"><a href="#">Summer 2017</a></li>
+            <li class="breadcrumb-item"><a href="#">Italy</a></li>
+            <li class="breadcrumb-item active">Rome</li>
+        </ul>
     </div>
 
 
