--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
 
-<!-- adding image to card (card top)-->
+    <!-- adding image to card (card top)-->
     <div class="card my-3" style="width:400px">
         <img class="card-img-top" src="https://images.unsplash.com/photo-1735257676933-828bfbdc03a2?q=80&w=1475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image">
         <div class="card-body">
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <!-- card bootom -->
+    <!-- card bottom -->
     <div class="card my-3" style="width:400px">
         <div class="card-body">
             <h4 class="card-title">John Doe</h4>
@@ -119,7 +119,19 @@
         </div>
         <img class="card-img-bottom" src="https://images.unsplash.com/photo-1735257676933-828bfbdc03a2?q=80&w=1475&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image">
     </div>
+
+    <!-- card with image overlay -->
+    <div class="card m-5" style="width:500px">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1727261909598-ce67f083f858?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image">
+        <div class="card-img-overlay">
+            <h4 class="card-title">John Doe</h4>
+            <p class="card-text">Some example text.</p>
+            <a href="#" class="btn btn-primary">See Profile</a>
+        </div>
+    </div>
 </div> 
+
+
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js"></script>
